更新 CMakeLists.txt 以添加可执行文件和链接库；新增 dict 类以支持字典功能；重构 box 类以优化构造函数；在 except.h 中更新异常类以使用 str 类型；新增迭代器类；在 object 类中实现方法；在 ref.h 中添加哈希和比较操作符；在 str.h 中添加 c_str 方法。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,4 +26,6 @@ install(TARGETS Python
     RUNTIME DESTINATION bin
 )
 
-install(FILES dynamic_types.h DESTINATION include)
+add_executable(main main.cpp)
+
+target_link_libraries(main Python)
