--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 # 添加库目标
-aux_source_directory(${CMAKE_SOURCE_DIR} SOURCES)
+file(GLOB_RECURSE  SOURCES CONFIGURE_DEPENDS
+    *.cpp
+)
 
 add_library(Python
     ${SOURCES}
