--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ if (BUILD_TEST)
     enable_testing()
     add_executable(tests
         bool_test.cpp
+        str_test.cpp
     )
     target_link_libraries(tests PRIVATE gtest_main Python)
     include(GoogleTest)
