在 CMakeLists.txt 中添加 none_test.cpp 和 floating_point_test.cpp 测试文件；移除多个类型的 type 函数；在 floating_point.h 中初始化 _value 为 0.0L；新增浮点数和 NoneType 的测试用例以增强测试覆盖率。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,8 @@ if (BUILD_TEST)
     add_executable(tests
         bool_test.cpp
         str_test.cpp
+        none_test.cpp
+        floating_point_test.cpp
     )
     target_link_libraries(tests PRIVATE gtest_main Python)
     include(GoogleTest)
